--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="linkWrap">
                     <a href="https://www.figma.com/design/R4Wug9gU0NGCEXmTXlA4b2/Portfolio?node-id=0-1&node-type=canvas&t=upMJy5kZgN2Tn54T-0" target="_blank" class="figma">피그마</a>
-                    <a href="#none" class="mySelf">자기소개서</a>
+                    <a href="assets/resume/이력서_박동민.pdf" class="mySelf">자기소개서</a>
                 </div>
             </div>
             <button type="button" class="menuBar">메뉴바</button>
@@ -95,43 +95,41 @@
         <div class="container">
             <span class="secTit lora">ABOUT ME</span>
             <div class="aboutWrap">
-                <img src="assets/img/img_about.png" alt="자기소개서 사진">
-                <div class="about">
-                    <div class="topWrap">
-                        <span class="name">DONG MIN PARK</span>
-                        <p>
-                            <span>저는 배움의 가치를 높게 생각하는 사람입니다.</span>
-                            <span>새로운 것을 배울 때 나의 것으로<br/> 만들기 위해 도전하고</span>
-                            <span>노력합니다. 지속적인 학습을 통해 더 많은 기술들을 익히고 </span>
-                            <span>있으며,<br/> 검색을 통해 더 많은 정보들을 얻고 있습니다.</span> 
-                            <span>깔끔하고 정교한 디자인을 추구하며,<br/> 웹표준과 웹접근성을 준수하여</span>
-                            <span>퍼블리싱하는 웹퍼블리셔가 되기위해 나아가는 중입니다.</span>
-                        </p>
-                    </div>
-                    <div class="botWrap">
-                        <div>
-                            <ul>
-                                <li class="tit">LICENSE</li>
-                                <li class="txt">컴퓨터활용능력 1급</li>
-                                <li class="txt">MOS Master</li>
-                                <li class="txt mb0">1종 보통운전면허</li>
-                            </ul>
-                            <ul>
-                                <li class="tit">EDUCATION</li>
-                                <li class="txt">대전과학기술대학교</li>
-                                <li class="txt mb0">용인 기흥고등학교</li>
-                            </ul>
-                        </div>
-                        <ul class="skillWrap">
-                            <li class="tit">SKILL</li>
-                            <li class="txt">HTML</li>
-                            <li class="txt">CSS</li>
-                            <li class="txt">JS</li><br/>
-                            <li class="txt">JQuery</li>
-                            <li class="txt">GIT</li>
-                            <li class="txt">FIGMA</li>
-                        </ul>
-                    </div>
+                <div class="leftWrap">
+                    <p class="greetings1">
+                        안녕하세요!<br/>
+                        웹 퍼블리셔 박동민입니다.
+                    </p>
+                    <p class="greetings2">
+                        저는 배움의 가치를 중요하게 생각하며, 새로운 것을 자신의 것으로<br/>
+                        만들기 위해 도전하고 노력합니다. 꾸준한 학습을 통해 다양한 기술을<br/> 
+                        익히고 있으며, 검색과 자료 조사를 통해 깊이 있는 정보를 얻고자 합니다.<br/> 
+                        또한, 깔끔하고 정교한 디자인을 지향하며, 웹 표준과 웹 접근성을<br/>
+                        준수한 퍼블리싱을 목표로 성장해 나가고 있는 웹 퍼블리셔입니다. 
+                    </p>
+                    <a href="#none">이력서 보기</a>
+                </div>
+                <div class="rightWrap">
+                    <ul class="license">
+                        <li class="tit">LICENSE</li>
+                        <li class="txt mb10">· 컴퓨터활용능력 1급</li>
+                        <li class="txt">· MOS Master</li>
+                        <li class="txt mr0">· 1종 보통운전면허</li>
+                    </ul>
+                    <ul class="education">
+                        <li class="tit">EDUCATION</li>
+                        <li class="txt mb10">· 대전과학기술대학교</li>
+                        <li class="txt mr0">· 용인기흥고등학교</li>
+                    </ul>
+                    <ul class="skill">
+                        <li class="tit">SKILL</li>
+                        <li class="txt mb10">#HTML</li>
+                        <li class="txt mb10">#CSS</li>
+                        <li class="txt mb10">#JS</li><br/>
+                        <li class="txt">#jQuery</li>
+                        <li class="txt">#Git Hub</li>
+                        <li class="txt mr0">#FIGMA</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -142,72 +140,81 @@
             <span class="secTit lora">SKILL</span>
             <ul>
                 <li>
-                    <img src="assets/img/icon_html.svg" alt="html">
-                    <div>
-                        <span>HTML</span>
-                        <p>
-                            웹표준과 웹접근성을 준수하여 웹 페이지와<br/>
-                            그 내용을 구조화 할 수 있습니다. 적절한<br/>
-                            태그들을 사용함으로써 최적화된 검색엔진에<br/> 
-                            노출되도록 노력하고 있습니다.<br/>
-                        </p>
+                    <div class="box">
+                        <img src="assets/img/icon_html.svg" alt="HTML">
+                        <div>
+                            <span>HTML</span>
+                            <p>
+                                HTML5의 웹표준과 웹접근성 규칙을 준수하여,<br/>
+                                웹 페이지의 구조와 콘텐츠를 체계적으로 제작한<br/>
+                                경험이 있습니다.
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/img/icon_css.svg" alt="html">
-                    <div>
-                        <span>CSS</span>
-                        <p>
-                            웹 페이지 선택 요소들의 스타일을 다양하게<br/>
-                            구현 할 수 있으며, 반응형 디자인을 통해<br/>
-                            다양한 디바이스들의 호환성을 보장하여<br/>
-                            효율적으로 웹페이지를 구현 할 수 있습니다.<br/>
-                        </p>
+                    <div class="box">
+                        <img src="assets/img/icon_css.svg" alt="CSS">
+                        <div>
+                            <span>CSS</span>
+                            <p>
+                                CSS를 활용해 웹 페이지 요소에 다양한 스타일을<br/>
+                                적용하여 직관적이고 사용자 친화적인 UI를 구현<br/>
+                                한 경험이 있습니다.<br/>
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/img/icon_js.svg" alt="html">
-                    <div>
-                        <span>JAVASCRIPT</span>
-                        <p>
-                            JQuery를 함께 병행하여 사용하며, 다양한<br/>
-                            동적인 역할을 수행 할 수 있도록 학습하고<br/>
-                            있으며, 웹 페이지 내에서도 다양하게 적용<br/> 
-                            하고 있습니다.<br/>
-                        </p>
+                    <div class="box">
+                        <img src="assets/img/icon_js.svg" alt="JAVASCRIPT">
+                        <div>
+                            <span>JAVASCRIPT</span>
+                            <p>
+                                JavaScript를 이용해 웹 페이지 내에 다양한<br/>
+                                동적 기능을 추가하고, 상호작용을 효과적으로<br/> 
+                                구현한 경험이 있습니다.
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/img/icon_jquery.svg" alt="html">
-                    <div>
-                        <span>JQuery</span>
-                        <p>
-                            JavaScript를 응용하여 보다 쉽게 사용하고<br/> 
-                            있으며, 빠르고 효과적으로 기능을 만들기<br/> 
-                            위해 노력하고 있습니다.<br/> 
-                        </p>
+                    <div class="box">
+                        <img src="assets/img/icon_jquery.svg" alt="jQuery">
+                        <div>
+                            <span>jQuery</span>
+                            <p>
+                                jQuery를 통해 JavaScript 기능을 쉽게 활용<br/>
+                                하여 작업 속도를 향상시키고 사용자 경험을<br/> 
+                                개선한 경험이 있습니다.
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/img/icon_git.svg" alt="html">
-                    <div>
-                        <span>GIT HUB</span>
-                        <p>
-                            개인 GIT HUB 계정을 통해 작업물들을 공유<br/> 
-                            하고 있으며, 현업에서 필요한 기술들을 배워<br/> 
-                            꾸준히 습득하고 있습니다.<br/> 
-                        </p>
+                    <div class="box">
+                        <img src="assets/img/icon_git.svg" alt="GIT HUB">
+                        <div>
+                            <span>GIT HUB</span>
+                            <p>
+                                Git Hub를 사용하여 개인 포트폴리오를 공유<br/>
+                                하고, 현업에 필요한 기술을 습득하며 현업 툴에<br/>
+                                익숙해졌습니다.
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/img/icon_figma_tool.svg" alt="html">
-                    <div>
-                        <span>FIGMA</span>
-                        <p>
-                            다양한 디자인 툴 기능을 이용해 디자인<br/>  
-                            작업을 할 수 있으며, 깔끔하고 정교한 <br/> 
-                            디자인 기획을 하기 위해 노력하고 있습니다.<br/> 
-                        </p>
+                    <div class="box">
+                        <img src="assets/img/icon_figma_tool.svg" alt="FIGMA">
+                        <div>
+                            <span>FIGMA</span>
+                            <p>
+                                FIGMA로 기획한 다양한 디자인을 바탕으로<br/>
+                                웹 페이지 리뉴얼을 진행하여 기획부터 제작까지<br/>
+                                경험한 바 있습니다.
+                            </p>
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -224,8 +231,8 @@
                         <li class="swiper-slide slide1">
                             <div class="content">
                                 <div class="mainWrap">
-                                    <span class="mainTit">CGV</span>
-                                    <span class="mainTxt">CLONE CODING</span>
+                                    <span class="mainTit">SEOUL MILK</span>
+                                    <span class="mainTxt">RENEWAL</span>
                                 </div>
                                 <ul>
                                     <li>
@@ -236,7 +243,7 @@
                                         <span class="tit">기여도</span>
                                         <span class="txt">개인100%</span>
                                         <span class="tit ml10">기간</span>
-                                        <span class="txt">7일</span>
+                                        <span class="txt">12일</span>
                                     </li>
                                     <li>
                                         <span class="tit">TOOL</span>
@@ -244,8 +251,9 @@
                                     </li>
                                 </ul>
                                 <div class="linkWrap">
-                                    <a href="https://pdm8-code.github.io/cgv/" target="_blank">바로가기</a>
-                                    <a href="https://www.figma.com/design/RW3UZi0hyvNyHnL9yH5EdW/CGV?node-id=0-1&node-type=canvas&t=UN59pLLqjveu9z44-0" target="_blank">FIGMA</a>
+                                    <a href="https://pdm8-code.github.io/seoul-milk/" target="_blank">바로가기</a>
+                                    <a href="https://www.figma.com/design/9Z4Fcv5vo7VV1aRHBEKhqX/SEOUL-MILK---renewal?node-id=0-1&node-type=canvas&t=y0rIZc8wA1ZO2Hge-0" target="_blank">FIGMA</a>
+                                    <a href="https://www.figma.com/proto/GTDsAd2ncSDsCnWAilP82H/%EC%84%9C%EC%9A%B8%EC%9A%B0%EC%9C%A0%EA%B8%B0%ED%9A%8D%EC%84%9C?node-id=35-431" target="_blank">기획서</a>
                                 </div>
                             </div>
                         </li>
@@ -253,8 +261,8 @@
                         <li class="swiper-slide slide2">
                             <div class="content">
                                 <div class="mainWrap">
-                                    <span class="mainTit">HANWHA</span>
-                                    <span class="mainTxt">CLONE CODING</span>
+                                    <span class="mainTit">HOLLYS</span>
+                                    <span class="mainTxt">RENEWAL</span>
                                 </div>
                                 <ul>
                                     <li>
@@ -265,7 +273,7 @@
                                         <span class="tit">기여도</span>
                                         <span class="txt">개인100%</span>
                                         <span class="tit ml10">기간</span>
-                                        <span class="txt">7일</span>
+                                        <span class="txt">12일</span>
                                     </li>
                                     <li>
                                         <span class="tit">TOOL</span>
@@ -273,11 +281,12 @@
                                     </li>
                                 </ul>
                                 <div class="linkWrap">
-                                    <a href="https://pdm8-code.github.io/hanwha/" target="_blank">바로가기</a>
-                                    <a href="https://www.figma.com/design/UXqpZRFIEIO5CCs1unhPTc/%ED%95%9C%ED%99%94%EC%83%9D%EB%AA%85?t=UN59pLLqjveu9z44-0" target="_blank">FIGMA</a>
+                                    <a href="https://pdm8-code.github.io/hollys/" target="_blank">바로가기</a>
+                                    <a href="https://www.figma.com/design/rZyoviNwdi4IRno1IXZ8vw/HOLLYS-RENEWAL?t=UN59pLLqjveu9z44-0" target="_blank">FIGMA</a>
+                                    <a href="https://www.figma.com/proto/KROCcWfp9fbqXv59RyKJRz/%ED%95%A0%EB%A6%AC%EC%8A%A4-%EA%B8%B0%ED%9A%8D%EC%84%9C?node-id=2-2" target="_blank">기획서</a>
                                 </div>
                             </div>
-                        </li>
+                        </li>  
                         <!-- 슬라이드 3 -->
                         <li class="swiper-slide slide3">
                             <div class="content">
@@ -311,8 +320,8 @@
                         <li class="swiper-slide slide4">
                             <div class="content">
                                 <div class="mainWrap">
-                                    <span class="mainTit">HOLLYS</span>
-                                    <span class="mainTxt">RENEWAL</span>
+                                    <span class="mainTit">HANWHA</span>
+                                    <span class="mainTxt">CLONE CODING</span>
                                 </div>
                                 <ul>
                                     <li>
@@ -323,7 +332,7 @@
                                         <span class="tit">기여도</span>
                                         <span class="txt">개인100%</span>
                                         <span class="tit ml10">기간</span>
-                                        <span class="txt">12일</span>
+                                        <span class="txt">7일</span>
                                     </li>
                                     <li>
                                         <span class="tit">TOOL</span>
@@ -331,9 +340,8 @@
                                     </li>
                                 </ul>
                                 <div class="linkWrap">
-                                    <a href="https://pdm8-code.github.io/hollys/" target="_blank">바로가기</a>
-                                    <a href="https://www.figma.com/design/rZyoviNwdi4IRno1IXZ8vw/HOLLYS-RENEWAL?t=UN59pLLqjveu9z44-0" target="_blank">FIGMA</a>
-                                    <a href="https://www.figma.com/proto/KROCcWfp9fbqXv59RyKJRz/%ED%95%A0%EB%A6%AC%EC%8A%A4-%EA%B8%B0%ED%9A%8D%EC%84%9C?node-id=2-2" target="_blank">기획서</a>
+                                    <a href="https://pdm8-code.github.io/hanwha/" target="_blank">바로가기</a>
+                                    <a href="https://www.figma.com/design/UXqpZRFIEIO5CCs1unhPTc/%ED%95%9C%ED%99%94%EC%83%9D%EB%AA%85?t=UN59pLLqjveu9z44-0" target="_blank">FIGMA</a>
                                 </div>
                             </div>
                         </li>
@@ -341,8 +349,8 @@
                         <li class="swiper-slide slide5">
                             <div class="content">
                                 <div class="mainWrap">
-                                    <span class="mainTit">SEOUL MILK</span>
-                                    <span class="mainTxt">RENEWAL</span>
+                                    <span class="mainTit">CGV</span>
+                                    <span class="mainTxt">CLONE CODING</span>
                                 </div>
                                 <ul>
                                     <li>
@@ -353,7 +361,7 @@
                                         <span class="tit">기여도</span>
                                         <span class="txt">개인100%</span>
                                         <span class="tit ml10">기간</span>
-                                        <span class="txt">12일</span>
+                                        <span class="txt">7일</span>
                                     </li>
                                     <li>
                                         <span class="tit">TOOL</span>
@@ -361,12 +369,11 @@
                                     </li>
                                 </ul>
                                 <div class="linkWrap">
-                                    <a href="https://pdm8-code.github.io/seoul-milk/" target="_blank">바로가기</a>
-                                    <a href="https://www.figma.com/design/9Z4Fcv5vo7VV1aRHBEKhqX/SEOUL-MILK---renewal?node-id=0-1&node-type=canvas&t=y0rIZc8wA1ZO2Hge-0" target="_blank">FIGMA</a>
-                                    <a href="https://www.figma.com/proto/GTDsAd2ncSDsCnWAilP82H/%EC%84%9C%EC%9A%B8%EC%9A%B0%EC%9C%A0%EA%B8%B0%ED%9A%8D%EC%84%9C?node-id=35-431" target="_blank">기획서</a>
+                                    <a href="https://pdm8-code.github.io/cgv/" target="_blank">바로가기</a>
+                                    <a href="https://www.figma.com/design/RW3UZi0hyvNyHnL9yH5EdW/CGV?node-id=0-1&node-type=canvas&t=UN59pLLqjveu9z44-0" target="_blank">FIGMA</a>
                                 </div>
                             </div>
-                        </li>                    
+                        </li>
                     </ul>
                     <div class="swiper-pagination"></div>
                     <div class="swiper-button-prev"></div>
@@ -380,8 +387,9 @@
         <div class="container">
             <span class="secTit lora">CONTACT</span>
             <p>
-                기억에 남는 사람, 함께 일하고 싶은 사람이 필요하신가요?<br/>
-                편하게 연락 주시면 최대한 빠르게 회신드리겠습니다.
+                저의 포트폴리오를 방문해주셔서 감사합니다.<br/>
+                궁금한 점이 있으시다면 편하게 연락 주시면<br/>
+                최대한 빠르게 회신드리겠습니다.
             </p>
             <span class="gmail">pdmhb77@gmail.com</span>
             <div class="btnWrap">
