--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="linkWrap">
                     <a href="https://www.figma.com/design/R4Wug9gU0NGCEXmTXlA4b2/Portfolio?node-id=0-1&node-type=canvas&t=upMJy5kZgN2Tn54T-0" target="_blank" class="figma">피그마</a>
-                    <a href="assets/resume/이력서_박동민.pdf" class="mySelf">자기소개서</a>
+                    <a href="assets/resume/이력서_박동민.pdf" target="_blank" class="mySelf">자기소개서</a>
                 </div>
             </div>
             <button type="button" class="menuBar">메뉴바</button>
