--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="linkWrap">
             <a href="https://www.figma.com/design/R4Wug9gU0NGCEXmTXlA4b2/Portfolio?node-id=0-1&node-type=canvas&t=vAML2DvOJ2uBTGI7-0" target="_blank" class="figma">피그마</a>
-            <a href="#none" class="mySelf">자기소개서</a>
+            <a href="assets/resume/이력서_박동민.pdf" target="_blank" class="mySelf">자기소개서</a>
         </div>
         <button type="button" class="closeBtn">닫기버튼</button> 
     </div>
