--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         또한, 깔끔하고 정교한 디자인을 지향하며, 웹 표준과 웹 접근성을<br/>
                         준수한 퍼블리싱을 목표로 성장해 나가고 있는 웹 퍼블리셔입니다. 
                     </p>
-                    <a href="#none">이력서 보기</a>
+                    <a href="assets/resume/이력서_박동민.pdf" target="_blank">이력서 보기</a>
                 </div>
                 <div class="rightWrap">
                     <ul class="license">
